--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ div{
 p{
     background-color: black;
     color: white;
+  
     
 }
 .pdif{
@@ -55,12 +56,14 @@ button{
 }
 input{
     border-radius: 15px;
-    width: 350px;
+    width: 300px;
     padding: 5px;
-    background-color: red;
-    color:white;
-    margin-left: 73%;
-    margin-top: 0;
+    background-color: white;
+    color:black;
+    margin-right: 73%;
+    margin-top: 10px;
+    box-shadow: inset;
+    
 }
 .comprar-1{ 
     background-color: rgb(13, 163, 13);
@@ -119,4 +122,33 @@ ul li a {
     color: black;
     background-color: rgb(221, 18, 18);
     text-align: center;
+}
+h3{
+    background-color: rgb(221, 18, 18);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h4{
+    background-color: rgb(221, 18, 18);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    padding: 20px;
+}
+form{
+    width: 55%;
+    
+} 
+.forma{ 
+ background-color: black;
+ color: white;
+}
+.op{
+    padding: 30px;
+}
+.enviar{
+    background-color:rgb(221, 18, 18) ;
+    color:white;
+    border-radius: 5px;
+    padding: 3px;
 }
